fix(egg): remove unneeded scrollbars

--- a/public/blog/eloquentjs/egg/egg.css
+++ b/public/blog/eloquentjs/egg/egg.css
@@ -13,7 +13,7 @@ textarea {
 }
 
 pre {
-  overflow: scroll;
+  overflow: auto;
 }
 
 @media (min-width: 40em) {
